syntax = "proto3";

package location;

service Location {
    rpc Distance(DistanceRequest) returns (DistanceResponse) {}
}

// Points are represented as latitude-longitude pairs in the E7 representation
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message DistanceRequest {
    Point point1 = 1;
    Point point2 = 2;
}

message DistanceResponse {
    double distance = 1;
}
